parser/src/test/resources/corpus/valid/24_let_aggregation.ff
rule "Let Aggregations" {
  let total_mv = sum of position market value
  let by_class = sum of fee by share class
  let warr = weighted average return weighted by capital
}
