parser/src/test/resources/corpus/invalid/50_weighted_no_average.ff
rule "Weighted No Average" {
  let x = weighted return weighted by capital
}
